--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-family: Calibri (Body);
+    font-family: Calibri, sans-serif;
     font-size: 1.1em;
     text-align: center;
     padding: 7%;
